# scie

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json  version.rc
.github/workflows/: release.yml
Data/: CraftingInventoryExtender.esp  CraftingInventoryExtenderVanillaCountFix.esp
Data/Interface/Translations/: CraftingInventoryExtender_ENGLISH.txt
Data/SKSE/Plugins/: CraftingInventoryExtender.ini
Data/SKSE/Plugins/CraftingInventoryExtender/: ExampleModConfig.ini  SCIE_AstronomersLoft.ini  SCIE_BlackthornManor.ini  SCIE_CaranthirTower.ini  SCIE_Clockwork.ini  SCIE_DeadMansDread.ini  SCIE_EliRouta.ini  SCIE_EliTalAschan.ini  SCIE_ElisBreezehome.ini  SCIE_ElysiumEstate.ini  SCIE_GeneralStores.ini  SCIE_Hendraheim.ini  SCIE_HipBag.ini  SCIE_HjertesteenHall.ini  SCIE_JKsRiverfallCottage.ini  SCIE_KingOfWormsQueenOfDawn.ini  SCIE_LOTD_Safehouse.ini  SCIE_LeafRest.ini  SCIE_MorskomEstate.ini  SCIE_Myrwatch.ini  SCIE_OrlandosSolitudeAtticLoft.ini  SCIE_PinewoodManor.ini  SCIE_RayeksEnd.ini  SCIE_RiversideLodge.ini  SCIE_ShadowfootSanctum.ini  SCIE_ShadowstarCastle.ini  SCIE_SkyfallEstateRevamped.ini  SCIE_SkystoneCastle.ini  SCIE_TheScarlett.ini  SCIE_TundraHomestead.ini  SCIE_VanillaHomes.ini  SCIE_WakingNightmare.ini
docs/: API.md  Build.md  CHANGELOG.md
include/: FormLookup.h  PCH.h  Version.h
include/API/: APIMessaging.h
include/Hooks/: CraftingSession.h  InventoryHooks.h
include/Papyrus/: PapyrusInterface.h
include/Services/: APIService.h  ContainerManager.h  ContainerRegistry.h  ContainerUtils.h  INISettings.h  SLIDIntegration.h  SourceScanner.h  TranslationService.h
patches/: SCIE_CCOR_README.md  SCIE_CCOR_RecipesPatch.esp  SCIE_CC_ForgottenSeasons_README.md  SCIE_CC_ForgottenSeasons_RecipesPatch.esp  SCIE_DLC_README.md  SCIE_DLC_RecipesPatch.esp
scripts/papyrus/: compile_scie_script.bat
scripts/papyrus/compiled/: SCIE_API.pex  SCIE_DetectContainersScript.pex  SCIE_MCM.pex  SCIE_NativeFunctions.pex  SCIE_ToggleContainerScript.pex
scripts/papyrus/source/: SCIE_API.psc  SCIE_DetectContainersScript.psc  SCIE_MCM.psc  SCIE_NativeFunctions.psc  SCIE_ToggleContainerScript.psc
src/: main.cpp
src/API/: APIMessaging.cpp
src/Hooks/: CraftingSession.cpp  InventoryHooks.cpp
src/Papyrus/: PapyrusInterface.cpp
src/Services/: APIService.cpp  ContainerManager.cpp  ContainerRegistry.cpp  INISettings.cpp  SLIDIntegration.cpp  SourceScanner.cpp  TranslationService.cpp
translations/: translations.json
